--- a/src/server_employer/Source/views/partials/header_employer_login.hbs
+++ b/src/server_employer/Source/views/partials/header_employer_login.hbs
@@ -1,3 +1,4 @@
+
 <nav class="navbar navbar-expand-lg navbar-light header">
     <a href="/employer/homepage">
         <img id="logo_web_home_recruit" src="/css/style/image/logo_web.svg" alt="logoweb">
@@ -23,12 +24,12 @@
                 <img src="/css/style/image/ic_setting_account.svg" id="ic_setting_account_candidate"
                     alt="ic_setting_account_candidate">
             </a>
-            <a class="dropdown-item" id="application_management_candidate" href="/employer/manage_recruitments">Quản lý
-                tin tuyển dụng
+            
+            <a class="dropdown-item" id="application_management_candidate" href="/employer/manage_recruitments">Quản lý tin tuyển dụng
                 <img src="/css/style/image/ic_managed_application.svg" id="ic_application_management_candidate"
                     alt="ic_application_management_candidate">
             </a>
-            <a class="dropdown-item" id="application_management_candidate" href="/auth/change_password">Đổi mật khẩu
+             <a class="dropdown-item" id="change_password_employer" href="/auth/change_password">Đổi mật khẩu
                 <img src="/css/style/image/ic_managed_application.svg" id="ic_application_management_candidate"
                     alt="ic_application_management_candidate">
             </a>
