--- a/src/server_employer/Source/views/partials/header_employer_not_login.hbs
+++ b/src/server_employer/Source/views/partials/header_employer_not_login.hbs
@@ -2,7 +2,7 @@
     <a href="/employer/homepage"><img id="logo_web" src="/css/style/image/logo_web.svg" alt="logoweb"></a>
     <a href="#" id="find_job">Tìm việc làm</a>
     <a href="#" id="list_company">Danh sách công ty</a>
-    <a href="#" id="blog">Blog</a>
+    <a href="#" id="blog_header">Blog</a>
     <button id="btn_login"><a id="btn_login_recruit" href="/auth/sign_in">Đăng nhập</a></button>
     <button id="btn_signin"><a id="btn_signin_recruit" href="/auth/sign_up">Đăng ký</a></button>
 </nav>
