--- a/src/server_candidate/Source/views/candidate/content_profile_employer.hbs
+++ b/src/server_candidate/Source/views/candidate/content_profile_employer.hbs
@@ -70,7 +70,7 @@
 
         <div id="rectangle_evaluate_detail_account">
             <div id="text_evaluate_total"> Đánh giá tổng thể </div>
-            <div id="value_evaluate_total">3,5</div>
+            <div id="value_evaluate_total">{{total_rating}}</div>
             <img src="/css/style/image/ic_star.svg" id="evaluate_star1" alt="evaluate_star1">
             <img src="/css/style/image/ic_star.svg" id="evaluate_star2" alt="evaluate_star2">
             <img src="/css/style/image/ic_star.svg" id="evaluate_star3" alt="evaluate_star3">
@@ -183,7 +183,7 @@ accounting, payroll, healthcare, and apartment management business.
                     <a class="title_recuit_company_home_candidate">${_list_recruitments[i].title}</a>
                     <div class="wage_copany_home_candidate">${_list_recruitments[i].min_salary}-${_list_recruitments[i].max_salary} triệu</div>
                     <div class="address_company_home_candidate">${_list_recruitments[i].min_salary}</div>
-                    <div class="experience_company_home_candidate">${_list_recruitments[i].experience} +</div>
+                    <div class="experience_company_home_candidate">${_list_recruitments[i].experience}</div>
                     <img src="/css/style/image/ic_time.svg" alt="ic_time" class="ic_time_card_company">
                     <div class="time_card_company">Cập nhật gần nhất: ${creation_date}</div>
                 </div>
