fix value send by add_recruitment

--- a/src/server_employer/Source/views/contents/add_recruitment.hbs
+++ b/src/server_employer/Source/views/contents/add_recruitment.hbs
@@ -42,10 +42,10 @@
 
             <select name="experience_recruitment" id="experience_edit_news" required="">
                 <option disabled selected value>Kinh nghiệm</option>
-                <option value="Không yêu cầu" class="op_select_method_work">Không yêu cầu</option>
-                <option value="Ít nhất 1 năm" class="op_select_method_work">Ít nhất 1 năm</option>
-                <option value="Ít nhất 2 năm" class="op_select_method_work">Ít nhất 2 năm</option>
-                <option value="Ít nhất 3 năm" class="op_select_method_work">Ít nhất 3 năm</option>
+                <option value="0" class="op_select_method_work">Không yêu cầu</option>
+                <option value="1" class="op_select_method_work">Ít nhất 1 năm</option>
+                <option value="2" class="op_select_method_work">Ít nhất 2 năm</option>
+                <option value="3" class="op_select_method_work">Ít nhất 3 năm</option>
             </select>
             {{!-- <input id="experience_edit_news" name="experience_recruitment" type="hidden" value="" /> --}}
 
