--- a/src/server_candidate/Source/views/partials/header_candidate_not_login.hbs
+++ b/src/server_candidate/Source/views/partials/header_candidate_not_login.hbs
@@ -5,6 +5,6 @@
     <a href="#" id="blog">Blog</a>
     <button id="btn_login"><a id="btn_login_candidate" href="/auth/login">Đăng nhập</a></button>
     <button id="btn_signin"><a id="btn_signin_candidate" href="/auth/signup">Đăng ký</a></button>
-    <a id="btn_switch_recruiter" href="http://localhost:3033/candidate/login">Dành cho nhà tuyển dụng</a>
+    <a id="btn_switch_recruiter" href="http://localhost:3034">Dành cho nhà tuyển dụng</a>
     <img src="/css/style/image/right_arrow.svg" id="ic_right_arrow" alt="go">
 </nav>
