--- a/src/server_employer/Source/views/partials/header_employer_not_login.hbs
+++ b/src/server_employer/Source/views/partials/header_employer_not_login.hbs
@@ -1,5 +1,7 @@
 <nav class="navbar navbar-expand-lg navbar-light header">
-    <a href="/employer/homepage"><img id="logo_web" src="/css/style/image/logo_web.svg" alt="logoweb"></a>
+    <a href="/employer/homepage"><img id="logo_web_home_recruit" src="/css/style/image/logo_web.svg" alt="logoweb"></a>
+            <img id="logo_web_for_business" src="/css/style/image/for_business.svg" alt="logoweb">
+
     <a href="#" id="find_job">Tìm việc làm</a>
     <a href="#" id="list_company">Danh sách công ty</a>
     <a href="#" id="blog_header">Blog</a>
