--- a/src/server_candidate/Source/views/partials/header_candidate_login.hbs
+++ b/src/server_candidate/Source/views/partials/header_candidate_login.hbs
@@ -1,5 +1,7 @@
 <nav class="navbar navbar-expand-lg navbar-light header">
+     <a href="/candidate/home">
     <img id="logo_web" src="/css/style/image/logo_web.svg" alt="logoweb">
+    </a>
     <a href="#" id="find_job">Tìm việc làm</a>
     <a href="#" id="list_company">Danh sách công ty</a>
     <a href="#" id="blog">Blog</a>
