--- a/src/server_admin/Source/views/partials/header_admin_login.hbs
+++ b/src/server_admin/Source/views/partials/header_admin_login.hbs
@@ -1,6 +1,7 @@
 <nav class="navbar navbar-expand-lg navbar-light header">
+    <a href="/admin/manage_account">
     <img id="logo_web_home_recruit" src="/css/style/image/logo_web.svg" alt="logoweb">
-   
+   </a>
     <div class="circle_icon_recruit">
         <img src="/css/style/image/ic_notify_white.svg" id="ic_notify_recruit" alt="ic_notify_candidate">
     </div>
