--- a/src/server_admin/Source/views/content_admin/manage_news.hbs
+++ b/src/server_admin/Source/views/content_admin/manage_news.hbs
@@ -12,12 +12,12 @@
     <a id="rectangle_candidate_new" href="/admin/manage_news/list_news_locked">
         <div id="quantity_account_banned">{{numberNews.numberLocked}}</div>
         <div id="text_account_banned">Tin tuyển dụng bị khóa</div>
-        <img src="/css/style/image/ic_candidate_new.svg" id="ic_new_home_recruit" alt="ic_new_home_recruit">
+        <img src="/css/style/image/ic_locked.svg" id="ic_new_home_recruit" alt="ic_new_home_recruit">
     </a>
-    <a id="rectangle_candidate_remove" href="/admin/manage_news/list_news_removed">
-        <div id="quantity_account_unapproved">{{numberNews.numberRemove}}</div>
-        <div id="text_account_unapproved">Tin tuyển dụng đã xóa</div>
-        <img src="/css/style/image/ic_candidate_recieve.svg" id="ic_receive_home_recruit" alt="ic_receive_home_recruit">
+    <a id="rectangle_news_remove" href="/admin/manage_news/list_news_removed">
+        <div id="quantity_news_deleted">{{numberNews.numberRemove}}</div>
+        <div id="text_news_deleted">Tin tuyển dụng đã xóa</div>
+        <img src="/css/style/image/ic_deleted.svg" id="ic_receive_home_recruit" alt="ic_receive_home_recruit">
     </a>
 
 </div>
