fix UI candidate

--- a/src/server_candidate/Source/views/candidate/content_manage_record.hbs
+++ b/src/server_candidate/Source/views/candidate/content_manage_record.hbs
@@ -2,7 +2,7 @@
     <div class="rectangle_content_application_management_candidate">
         <div id="text_application_management_candidate">Quản lý hồ sơ ứng tuyển</div>
         <div id="side_left_application_management_candidate">
-            <div type="button" id="btn_all_application_management_candidate">Tất cả</div>
+            <div type="button" id="btn_all_application_management_candidate" class="is_selected">Tất cả</div>
             <div type="button" id="btn_pending_application_management_candidate">Đang chờ duyệt</div>
             <div type="button" id="btn_selected_application_management_candidate">Đã được chọn</div>
             <div type="button" id="btn_not_suitable_application_management_candidate">Không phù hợp</div>
