--- a/src/server_candidate/Source/views/candidate/content_detail_cv.hbs
+++ b/src/server_candidate/Source/views/candidate/content_detail_cv.hbs
@@ -50,7 +50,7 @@
     $("#email_profile_candidate_recruit").html(`Giới thiệu: ${cv_info.introduce}`)
     // $("#address_profile_candidate_recruit").html(`${cv_info.name}`)
     // $("#name_candidate_recruit").html(`${cv_info.name}`)
-     $(".CV_profile_candidate").attr("href", `${cv_info.file_cv}`);
+     $("#CV_profile_candidate").attr("href", cv_info.file_cv);
     // handle when click name of candidate -> go to profile of candidate
     $("#name_candidate_recruit").click(function () {
         $(location).attr("href", "/employer/profile_candidate?id_candidate=" + cv_info.id_candidate)
